applications/loki/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/instance: loki
      app.kubernetes.io/component: gateway
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: monitoring.otelcol-gateway
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
              app.kubernetes.io/instance: grafana
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: otel-external
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: otel-external.otelcol-external
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: single-binary
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/instance: loki
      app.kubernetes.io/component: single-binary
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: loki
          podSelector:
            matchLabels:
              app.kubernetes.io/name: loki
              app.kubernetes.io/instance: loki
              app.kubernetes.io/component: gateway
      ports:
        - port: 3100
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: loki
          podSelector:
            matchLabels:
              app.kubernetes.io/name: loki
              app.kubernetes.io/instance: loki
              app.kubernetes.io/component: single-binary
      ports:
        - port: 3100
          protocol: TCP
        - port: 9095
          protocol: TCP
        - port: 7946
          protocol: TCP
        - port: 7946
          protocol: UDP
